[package]
name = "quantum_fortress"
version = "1.0.0"
edition = "2021"
authors = ["Narukihto"]
description = "A Post-Quantum Secure Gateway with Layered Defense"

[dependencies]
# Web Framework & Async Runtime
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Performance & Caching (Replay Protection)
moka = { version = "0.12", features = ["future"] }

# Post-Quantum Cryptography (Stable Versions)
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

# Blockchain Integration (Ethers)
ethers = { version = "2.0", features = ["rustls", "abigen"] }

# Middleware & Resilience (Corrected tower_governor)
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5", features = ["trace", "limit", "timeout"] }
tower_governor = "0.4" # تم التصحيح من tower-governor إلى tower_governor

# Logging & Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
hex = "0.4"
sha3 = "0.10"

# Security & TLS
rustls = "0.22"
tokio-rustls = "0.25"
axum-server = { version = "0.6", features = ["tls-rustls"] }
