[package]
name = "quantum_fortress"
version = "1.0.0"
edition = "2021"
authors = ["Narukihto"]
description = "A Post-Quantum Secure Gateway with Layered Defense"

[dependencies]
# Web Framework & Async Runtime
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
# Performance & Caching (Replay Protection)
moka = { version = "0.12", features = ["future"] }

# Post-Quantum Cryptography (Stable Versions)
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

# Blockchain Integration (Ethers)
ethers = { version = "2.0", features = ["rustls", "abigen"] }

# Middleware & Resilience
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5", features = ["trace", "limit", "timeout", "cors"] }
tower_governor = "0.4"

# Logging & Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
hex = "0.4"
sha3 = "0.10"

# TLS & Security (Native Axum 0.7 approach)
rustls = "0.22"
tokio-rustls = "0.25"
