[package]
name = "quantum_fortress"
version = "1.0.0"
edition = "2021"
authors = ["Narukihto"]
description = "A Post-Quantum Secure Gateway with Layered Defense"

[dependencies]
# --- Web Framework & Async Runtime ---
# Axum 0.7 uses Hyper 1.0, providing modern and fast networking.
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Post-Quantum Cryptography (PQC) ---
# Dilithium2 implementation for quantum-resistant digital signatures.
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

# --- Blockchain & Ledger Integration ---
# Ethers-rs handles the anchoring of content hashes to Ethereum.
ethers = { version = "2.0", features = ["rustls", "abigen"] }

# --- Security, Middleware & Resilience ---
# Tower-based layers for rate limiting, timeouts, and load shedding.
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5", features = ["trace", "limit", "timeout", "cors"] }
tower_governor = "0.4"
moka = { version = "0.12", features = ["future"] } # Replay attack protection

# --- Observability & Utilities ---
# Tracing for logging and Chrono for timestamping security events.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
hex = "0.4"
sha3 = "0.10"

# --- TLS & Infrastructure Security ---
# Native Rust implementation of TLS for secure communication.
rustls = "0.22"
tokio-rustls = "0.25"
